[maven-release-plugin] prepare release sf-pet-clinic-0.0.2

--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     </parent>
     <groupId>rousbe.springframework</groupId>
     <artifactId>sf-pet-clinic</artifactId>
-    <version>0.0.2-SNAPSHOT</version>
+    <version>0.0.2</version>
     <name>sf-pet-clinic</name>
     <description>SF Pet Clinic Project</description>
     <properties>
@@ -45,7 +45,7 @@
 
     <scm>
         <developerConnection>scm:git:https://github.com/rousbepistola/spring-pet-petclinic.git</developerConnection>
-        <tag>HEAD</tag>
+        <tag>sf-pet-clinic-0.0.2</tag>
     </scm>
 
 </project>
